# Detectron2_ros

./: README.md  test_detectron.py
detectron_msgs/: CMakeLists.txt  package.xml
detectron_msgs/msg/: SemanticInstance.msg
detectron_msgs/srv/: SegmentImage.srv
detectron_ros/: package.xml  setup.cfg  setup.py
detectron_ros/detectron_ros/: detectron_ros.py  test.py
instance_segmentation_utils/include/instance_segmentation_utils/: BufferWrapper.h  projectTo3D.hpp
instance_segmentation_utils/src/: projectTo3D.cpp
segmentation_msgs/: CMakeLists.txt  package.xml
segmentation_msgs/msg/: ObjectWithBoundingBox3D.msg  ObjectWithBoundingBox3DArray.msg  SemanticInstance2D.msg  SemanticPointCloud.msg
